--- a/index.html
+++ b/index.html
@@ -171,10 +171,10 @@
             </div>
             <div class="contact cf">
                 <p>
-                    전화번호 : (02) 111-1111
+                    <a href="tel:02-111-1111">전화번호 : (02) 111-1111</a>
                 </p>
                 <p>
-                    이메일 주소 : gallerypiece@cafe24.com
+                    <a href="mailto:gallerrypiece@cafe24.com">이메일 주소 : gallerypiece@cafe24.com</a>
                 </p>
             </div>
         </div>
